--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
-    <artifactId>gcpdevsecopsproject</artifactId>
+    <artifactId>DevSecops_Java_Poc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -72,7 +72,7 @@
           <version>2.0.0</version>
           <inherited>false</inherited>
           <configuration>
-            <org>gcpdevsecopsorg</org>
+            <org>devsecopspoc12</org>
           </configuration>
         </plugin>
        </plugins>
