--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -6,6 +6,10 @@ steps:
     args: ['verify', 'sonar:sonar','-Dsonar.host.url=https://sonarcloud.io','-Dsonar.organization=devsecopspoc12','-Dsonar.projectKey=kaushal1401_DevSecops_Java_Poc','-Dsonar.login=${_SONAR_TOKEN}']
     id: SAST Scan using SonarCloud in GCP DevSecOps Pipeline
 
+  - name: gcr.io/cloud-builders/docker
+    args: ["build", "-t", "us-central1-docker.pkg.dev/charlesschwab-poc/devsecops/hellospring", "--build-arg=JAR_FILE=target/DevSecops_Java_Poc 1.0-SNAPSHOT", "."]
+ images: ["us-central1-docker.pkg.dev/charlesschwab-poc/devsecops/hellospring"]
+
 #Run Software Composition Analysis (SCA security scan) using Snyk in GCP DevSecOps Pipeline
   - name: 'ubuntu'
     entrypoint: bash
