--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -5,7 +5,10 @@ steps:
     entrypoint: mvn
     args: ['verify', 'sonar:sonar','-Dsonar.host.url=https://sonarcloud.io','-Dsonar.organization=devsecopspoc12','-Dsonar.projectKey=kaushal1401_DevSecops_Java_Poc','-Dsonar.login=${_SONAR_TOKEN}']
     id: SAST Scan using SonarCloud in GCP DevSecOps Pipeline
-
+    
+  - name: maven:3-eclipse-temurin-17-alpine
+    entrypoint: mvn
+    args: ["package", "-Dmaven.test.skip=true"]
   - name: gcr.io/cloud-builders/docker
     args: ["build", "-t", "us-central1-docker.pkg.dev/charlesschwab-poc/devsecops/hellospring", "--build-arg=JAR_FILE=target/DevSecops_Java_Poc 1.0-SNAPSHOT", "."]
 
